feat: update map center/zoom for 5 Chennai CPCB stations
- Center: [13.05, 80.23] (was IIT Madras area)
- Zoom: 12 (was 17) for city-wide view of all stations
- No UI changes — original map layout preserved

--- a/v2/map.html
+++ b/v2/map.html
@@ -155,8 +155,8 @@
 <script>
 // ── Config ───────────────────────────────────────────────────────────────────
 const API_BASE = 'http://localhost:5001';
-const DEFAULT_CENTER = [12.8234, 80.0441];  // our data center (IIT Madras area)
-const DEFAULT_ZOOM = 17;
+const DEFAULT_CENTER = [13.05, 80.23];  // Chennai — covers all 5 CPCB stations
+const DEFAULT_ZOOM = 12;
 
 // Color scales for non-AQI fields
 const FIELD_SCALES = {
